argocd-ingress/argocd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-nodeport
  namespace: argocd
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32080  # Choose a port in the range 30000-32767
  selector:
    app.kubernetes.io/name: argocd-server
