argocd-ingress/argocd-ingress.yaml
# Backup in case ingress gets broken
apiVersion: v1
kind: Service
metadata:
  name: argo-lb
  namespace: argocd
spec:
  type: LoadBalancer
  selector:
     app.kubernetes.io/name: argocd-server
  ports:
  - port: 80
    targetPort: 8080
    name: http
  - port: 443
    targetPort: 8080
    name: https
  loadBalancerIP: 192.168.50.228
---
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: external
  rules:
  - host: argo.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
